# installer-lite

./: .gitignore  Cargo.toml  README.md
demo-app/: Cargo.toml
demo-app/installer/: installer.rs
src/: lib.rs
