[package]
name = "installer_lite"
version = "1.0.1"
edition = "2021"
authors = ["Djkáťo <djkatovfx@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple Windows Installer creator for your apps."
homepage = "https://github.com/djkato/installer-lite"
repository = "https://github.com/djkato/installer-lite"
readme = "README.md"
keywords = ["installer", "windows", "wrapper"]
categories = ["development-tools::build-utils", "gui", "development-tools"]
exclude = ["demo-app"]
[lib]
name = "installer_lite"
path = "src/lib.rs"

[dependencies]
eframe = "0.21.3"
rfd = "0.11.3"
